--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
 	<title>App Takeover by Mohamed Haron</title>
 
 	<!-- CSS -->
+	<meta name="propeller" content="39300a5cfe0a03af1ab409284df42a7e">
 	<!-- load bootstrap and our own personal stylesheet -->
 	<link href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/superhero/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
