--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,7 @@
 	<div class="jumbotron">
 		<h1>This page by Mohamed Haron!</h1>
 		<h2>This will fix Soon!</h2>
+		<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',4146673,document.body||document.documentElement)</script>
 		
 		<p>This is the sample of Page by <a href="http://m7md-haron.blogspot.com/">Mohamed Haron</a></p>
 		<a href="http://m7md-haron.blogspot.com/" class="btn btn-primary btn-lg">View my blog </a>
